fix scrollbar strange behaviour regarding event propagation to <li>

--- a/services/web/shared/styles/common.scss
+++ b/services/web/shared/styles/common.scss
@@ -69,6 +69,12 @@
     width: calc(100% + 3rem);
   }
 
+  &.without-before {
+    &::before {
+      display: none;
+    }
+  }
+
   .scrollbar {
     z-index: g-v.$modal-wrapper-z-index + 10;
     .scrollbar-track {
